--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -176,7 +176,7 @@ Black-hole X-ray binaries with dynamical mass measurements provide the only secu
 
 \textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
-\textbf{Inconsistency with Spin Observations from GW Sources?} These high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins.  
+\textbf{Inconsistency with Spin Observations from GW Sources?} These high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then either some future merging binary black holes should be observed to have high spins like those in X-ray binaries, or, perhaps more likely, the observed high-mass X-ray binaries and merging binary black holes sample different evolutionary histories (see \autoref{BHspins}).
 
 \textbf{Black Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
 
@@ -225,7 +225,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
 	
 \begin{figure}
 	\centering	
-	\includegraphics[width=0.9\textwidth]{StellarRadiusZsolarRoche.png}
+	\includegraphics[width=0.5\textwidth]{StellarRadiusZsolarRoche.png}
 \caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the implementation of single stellar evolution models of \citet{Hurley:2000} in the COMPAS binary population synthesis code \citep{Stevenson:2017}.   The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence (MS), Hertzsprung gap (HG), core Helium burning (CHeB) stages, and the asymptotic giant branch (AGB) for lower-mass stars.  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer \citep{Eggleton:1983}) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.\label{fig:Rmax} }
 \end{figure}
 
@@ -389,26 +389,26 @@ Dynamically formed binaries may also favor comparable masses because the heavies
 
 Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in \autoref{sec:CHE}. 
 
-\subsubsection{Black hole spin magnitudes and directions}
+\subsubsection{Black hole spin magnitudes and directions}\label{BHspins}
 The spins of merging black holes may carry imprints of their evolutionary history. 
 
 Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011,Tauris:2017}.  Meanwhile, the spin directions for dynamically formed binaries are likely to be distributed isotropically \citep[e.g.,][]{Rodriguez:2016spin}.  On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018,RodriguezAntonini:2018}.
 
-Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017} or during the supernova itself \citep{Batta:2017,Schroeder:2018}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}. \ajf{***Moved from Section 2:*** However, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see \autoref{environ}]{HotokezakaPiran:2017}.}
+Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017} or during the supernova itself \citep{Batta:2017,Schroeder:2018}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}. Moved from Section 2:*** However, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see \autoref{environ}]{HotokezakaPiran:2017}.
 
 Gravitational-wave spin measurements have so far only constrained the effective spin, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
 
 \subsubsection{Orbital eccentricities}
-	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain \ilya{detectable} eccentricities at merger if their orbits are very tight at formation \ajf{***can we make this quantitative (no worries if not easy)? all merging binaries have to be somewhat tight at formation, but these have to be tighter?***}. Dynamical formation of \ajf{very} tight binaries may be possible  through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}\ajf{;} \ilya{in \ajf{some} hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}}\ajf{;} or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
+	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitive band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
 
 
 \subsubsection{Formation environments}
 \label{environ}
 The evolutionary history of merging black holes is also dependent on their formation environments, particularly through the effect of chemical composition (metallicity) on stellar evolution and thereby black hole mass.
 
-Black hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the amount of ejecta during the supernova. Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core --- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron --- determines the ultimate black hole mass.  If left unperturbed, \ilya{of order} a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black hole remnant.
+Black hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the amount of ejecta during the supernova. Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core --- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron --- determines the ultimate black hole mass.  If left unperturbed, of order a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black hole remnant.
 
-The intense radiation from massive stars --- whose luminosities may be \ajf{$\sim 10^5 L_\odot$} --- drives significant winds, which can remove \ajf{a large amount of} material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction \ajf{$Z$} of the star's mass \ajf{contained} in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
+The intense radiation from massive stars with luminosities $\sim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
  
 \begin{figure}
 	\centering
@@ -420,7 +420,7 @@ The intense radiation from massive stars --- whose luminosities may be \ajf{$\si
 
 Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. The yield of merging black holes per unit star-forming mass is also greatest at lowest metallicity, due largely to the reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010,Kruckow:2018}. For the isolated binary channel, delayed stellar expansion at lower metallicity, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.
 
-The above considerations place constraints on the formation time of the systems that produced the observed merging black hole binaries. Most low-metallicity star formation occur\ajf{ed} in the early Universe, before \ajf{the interstellar medium was} polluted with metal-rich products of stellar evolution\ajf{; however,} a broad range of \ajf{stellar metallicities is observed at all epochs ***is this an OK substitution?***} \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. Meanwhile, population synthesis models of the classical formation channel indicate that the \ajf{distribution of delay time $\tau$} between star formation and merger peaks at shorter delay times, with a $p(\tau) \propto 1/\tau$ decay.  This time delay distribution is consistent with gravitational-wave driven merger time scales for binary separations distributed as $p(a) \propto 1/a$ at \ajf{the time of} double black hole formation (see \autoref{sec:CErates}), but  is robust to moderate changes in separation distribution because of the very steep scaling of the delay time with separation, $\tau \propto a^4$.  (Other formation channels, particularly chemically homogeneous evolution, predict very different delay time distributions, potentially providing an additional way to discriminate between formation \ajf{channels}.)  A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
+The above considerations place constraints on the formation time of the systems that produced the observed merging black hole binaries. Most low-metallicity star formation occured in the early Universe, before the interstellar medium was polluted with metal-rich products of stellar evolution; however, a broad range of stellar metallicities is observed at all epochs  \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. Meanwhile, population synthesis models of the classical formation channel indicate that the distribution of delay time $\tau$ between star formation and merger peaks at shorter delay times, with a $p(\tau) \propto 1/\tau$ decay.  This time delay distribution is consistent with gravitational-wave driven merger time scales for binary separations distributed as $p(a) \propto 1/a$ at the time of double black hole formation (see \autoref{sec:CErates}), but  is robust to moderate changes in separation distribution because of the very steep scaling of the delay time with separation, $\tau \propto a^4$.  (Other formation channels, particularly chemically homogeneous evolution, predict very different delay time distributions, potentially providing an additional way to discriminate between formation channels.)  A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
 
   
 
